--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,39 +1,32 @@
-name: Generate snake animation
+# GitHub Action for generating a contribution graph with a snake eating your contributions.
+name: Generate Snake
 
+# Controls when the action will run.
 on:
   schedule:
-    - cron: "0 */12 * * *"  # Executes every 12 hours at the top of the hour
+      # every 12 hours
+    - cron: "0 */12 * * *"
+    
+  # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
-  push:
-    branches:
-      - master
 
+# The sequence of runs in this workflow:
 jobs:
-  generate:
-    permissions:
-      contents: write
+  build:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
 
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v2
+      
+      - uses: Platane/snk@master
+        id: snake-gif
         with:
-          python-version: '3.x'
+          github_user_name: karreemm
+          # These outputs will be generated in your repo
+          svg_out_path: dist/github-contribution-grid-snake.svg
+          svg_out_path_dark: dist/github-contribution-grid-snake-dark.svg
 
-      - name: Install dependencies
-        run: pip install requests
-
-      - name: Generate snake.svg
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: python generate-snake.py
-
-      - name: Push snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
           build_dir: dist
